created portfolio div section html only

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 </head>
 
 <body>
-    
+    <div id="portfolio">
+        <div class="container">
+            <h1 class="subtitle">Work</h1>
+            <div class="work-list">
+                <div class="work">
+                    <img src="">
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
 </body>
 </html>
