row alignment move

--- a/index.html
+++ b/index.html
@@ -12,16 +12,31 @@
 <body>
     <div id="portfolio">
         <div class="container">
-            <h1 class="subtitle">Work</h1>
+            <h1 class="subtitle">Punchey</h1>
             <div class="work-list">
                 <div class="work">
                     <img src="">
+                    <div class="">
+                        <h3>TattooPro</h3>
+                        <p>Leading cloud software for Tattoo and Piercing</p>
+                        <a href="#"><i class="fa-solid fa-link"></i></a>
+                    </div>
                 </div>
                 <div class="work">
                     <img src="">
+                    <div class="">
+                        <h3>DetailPro</h3>
+                        <p>Leading cloud software for Tattoo and Piercing</p>
+                        <a href="#"><i class="fa-solid fa-link"></i></a>
+                    </div>
             </div>
             <div class="work">
                 <img src="">
+                <div class="">
+                    <h3>GroomPro</h3>
+                    <p>Leading cloud software for Tattoo and Piercing</p>
+                    <a href="#"><i class="fa-solid fa-link"></i></a>
+                </div>
         </div>
 
     </div>
